# carlos_controller

./: CMakeLists.txt  LICENSE  README.md  package.xml
Media/materials/scripts/: carlos.material
Media/models/: floor.dae  floor.stl  jvalinhas.dae  jvalinhas.stl
action/: DoTest.action
config/: arm_interface.yaml  crl_controller.yaml  feeder.yaml  finished_mission_dummy.yaml  studs_pattern.yaml
include/carlos_controller/: arm_interface.h  crl_contact.h  crl_controller.h  crl_controller_bk.h  crl_defines.h  studs_feeder.h
launch/: carlos_controller.launch  carlos_gazebo.launch  carlos_guardian_gazebo.launch  carlos_test.launch  jvalinhas_empty.launch  jvalinhas_empty.launch_old  jvalinhas_guardian.launch  jvalinhas_guardian_pwb.launch  moveit_test.launch  powerball_real.launch  powerball_simulation.launch  upload_carlos.launch  upload_guardian.launch
meshes/: sk14_131212.tar.bz2
meshes/jvalinhas/: beam01.stl  beam02.stl  beam03.stl  beam04.stl  beam05.stl  beam06.stl  beam07.stl  beam08.stl  beam09.stl  beam10.stl  beam11.stl  beam12.stl  beam13.stl  beam14.stl  beam15.stl  beam16.stl  beam_c01.stl  beam_c02.stl  beam_c03.stl  beam_c04.stl  beam_c05.stl  beam_c06.stl  beam_c07.stl  beam_c08.stl  beam_c09.stl  beam_c10.stl  beam_c11.stl  beam_c12.stl  beam_c14.stl  beam_c15.stl  beam_f01.stl  beam_f02.stl  beam_f03.stl  beam_f04.stl  beam_f05.stl  beam_f06.stl  beam_f07.stl  beam_f08.stl  beam_f09.stl  beam_f10.stl  (+35 more)
meshes/scenarios/: jvalinhas.stl
meshes/sk14/: bar1.stl  bar2.stl  base.stl  body.stl  contact.stl  head.stl  joint.stl  sk14.dae  sk14.stl
msg/: StudsPoses.msg
scripts/: carlos_vision.py  prueba_publica_studs.py  studs_defines.py  studs_dist.py  studs_test1.py  studs_test2.py  studs_test3.py
src/: arm_interface.cpp  client1_test.cpp  client2_test.cpp  crl_contact.cpp  crl_controller.cpp  crl_controller_bk.cpp  crl_moveit.cpp  crl_velocity.cpp  server_test.cpp  studs_feeder.cpp  test_distribution.cpp  test_move.cpp  test_projection.cpp  test_welding.cpp
srv/: CurrentJoints.srv  FTMove.srv  JointConstraints.srv  JointMove.srv  PoseMove.srv  RPYMove.srv
urdf/: carlos.urdf  carlos.urdf.xacro  guardian.urdf  guardian.urdf.xacro  guardian_pwb.urdf  jvalinhas.urdf  jvalinhas.urdf.xacro  powerball.urdf  powerball.urdf.xacro  sk14.gazebo.xacro  sk14.materials.xacro  sk14.urdf.xacro
worlds/: jvalinhas.world
